[package]
name = "uniconize"
description = "A workaround for Wine games blackscreening on sway"
version = "0.1.0"
authors = ["Dan Elkouby <streetwalkermc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/9ary/uniconize"

[dependencies.x11rb]
version = "0.4"
default-features = false
features = ["vendor-xcb-proto"]
