[package]
name = "uniconize"
description = "A workaround for Wine games blackscreening on sway"
version = "1.0.0"
authors = ["Dan Elkouby <streetwalkermc@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/neXromancers/uniconize"

[dependencies.x11rb]
version = "0.5"
# Disable the "allow-unsafe-code" feature and the libxcb dependency
default-features = false
